--- a/directive/introduction.html
+++ b/directive/introduction.html
@@ -72,7 +72,7 @@
     <h2>Directive / Introduction</h2>
     <h3 class="question">What is a directive?</h3>
     <div class="answer">
-      <div>Syntactically, a directive is an attribute that has a specific structure. It will be transformed into a callback function that is triggered by dagger.js under certain conditions in the runtime.</div>
+      <div>Syntactically, a directive is an <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Attributes">attribute</a> that has a specific structure. It will be transformed into a callback function that is triggered by dagger.js under certain conditions in the runtime.</div>
       <div>From a technical perspective, dagger.js is a directive-driven development framework (DDD). Directives are the only entry point for user code. Imaging the page as a car, then dagger.js is the engine of the car, and directives are the gears that drive the car's wheels.</div>
       </div>
     <h3 class="question">Host element and ordinary element</h3>
