--- a/directive/result.html
+++ b/directive/result.html
@@ -63,7 +63,7 @@
     <div class="answer">The *result directive supports the following predefined decorators:
         <div class="margin">1. “buffer”, boolean type. It is true if the current file should be loaded using <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/API/FileReader/readAsArrayBuffer">ArrayBuffer</a>.</div>
         <div class="margin">2. “data”, boolean type. It is true if the current file should be loaded using <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/API/FileReader/readAsDataURL">DataURL</a>.</div>
-        <div class="margin">3. “encoding”, string type. It is used to specify the encoding type used when reading the current file in text mode (default is “utf-8”).</div>
+        <div class="margin">3. “encoding”, string type. It is used to specify the encoding type used when reading the current file in <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/API/FileReader/readAsText">text mode</a> (default is “utf-8”).</div>
         Here is an example:
         <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] *result directive (decorators)" src="https://codepen.io/dagger8224/embed/bGLrqyb?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
             See the Pen <a href="https://codepen.io/dagger8224/pen/bGLrqyb">
