--- a/directive/selected.html
+++ b/directive/selected.html
@@ -75,7 +75,7 @@
     </div>
     <h3 class="question">What are the pre-defined decorators of the *selected directive?</h3>
     <div class="answer">The *selected directive supports the boolean type decorator "oneway".
-      <div>When the content of the *selected directive expression is a valid <a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators#%E5%B7%A6%E8%A1%A8%E8%BE%BE%E5%BC%8F">left expression</a>, user operations on the host element will cause the expression calculation result to be synchronized, enabling the two-way binding of scope data and host element status.</div>
+      <div>When the content of the *selected directive expression is a valid <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators#left-hand-side_expressions">left-hand-side expressions</a>, user operations on the host element will cause the expression calculation result to be synchronized, enabling the two-way binding of scope data and host element status.</div>
       <div>If the content of the expression is not assignable, an error will occur. In this case, the "oneway" decorator can be used to disable the two-way binding.</div>
       For example:
       <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] *value directive (oneway decorator)" src="https://codepen.io/dagger8224/embed/bNVwJYY?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
