--- a/router/introduction.html
+++ b/router/introduction.html
@@ -134,13 +134,13 @@
         on <a href="https://codepen.io">CodePen</a>.
       </iframe>
     </div>
-    <h3 class="question">Routing Jump</h3>
-    <div class="answer">There are two typical routing jump methods:
-      <div class="margin">1. Clicking a link tag whose "href" attribute points to a URL hash triggers a route jump. Please note that relative path links starting with "./" or "/" will be recognized as URL paths rather than hashes. Clicking such tags will jump to the independent page corresponding to the URL.</div>
+    <h3 class="question">Routing Redirect</h3>
+    <div class="answer">There are two typical routing redirect methods:
+      <div class="margin">1. Clicking a link tag whose "href" attribute points to a URL hash triggers a route redirect. Please note that relative path links starting with "./" or "/" will be recognized as URL paths rather than hashes. Clicking such tags will redirect to the independent page corresponding to the URL.</div>
       <div class="margin">2. Use following code to trigger the page hash state change:
         <div class="code">location.hash = 'targetHash';</div>
       </div>
-      <div>The following example shows how to jump to a specified route:</div>
+      <div>The following example shows how to redirect to a specified route:</div>
       <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] $route (redirect)" src="https://codepen.io/dagger8224/embed/NWYXbVv?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
         See the Pen <a href="https://codepen.io/dagger8224/pen/NWYXbVv">
         [dagger-demo] $route (redirect)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
