--- a/directive/controller.html
+++ b/directive/controller.html
@@ -24,7 +24,7 @@
     </div>
   </template>
   <template *exist="language === 'enUS'">
-    <h2>Directive / Control Directive</h2>
+    <h2>Directive / Control Directives</h2>
     <h3 class="question">What are Control Directives?</h3>
     <div class="answer">
       <div>Control directives are a group of directives that are triggered when the data in the scope changes.</div>
