--- a/directive/eventHandler.html
+++ b/directive/eventHandler.html
@@ -148,7 +148,7 @@
     </div>
   </template>
   <template *exist="language === 'enUS'">
-    <h2>Directive / Event Handler Directive</h2>
+    <h2>Directive / Event Handler Directives</h2>
     <h3 class="question">What is the usage of event handler directive?</h3>
     <div class="answer">
       <div>Event handler directive is used to add event listeners to the host element with the same name.</div>
