--- a/directive/lifeCycle.html
+++ b/directive/lifeCycle.html
@@ -155,7 +155,7 @@
             <td><a href="directive/loaded">+loaded</a></td>
           </tr>
           <tr>
-            <td><a href="directive/controller">Control Directive</a></td>
+            <td><a href="directive/controller">Control Directives</a></td>
           </tr>
           <tr>
             <td>Unloading</td>
