--- a/directive/meta.html
+++ b/directive/meta.html
@@ -12,10 +12,10 @@
     </div>
   </template>
   <template *exist="language === 'enUS'">
-    <h2>Directive / Meta-Directive</h2>
+    <h2>Directive / Meta Directives</h2>
     <h3 class="question">What are Meta-Directives?</h3>
     <div class="answer">meta-directives are a group of directives that are triggered during the template parsing stage of the host element.</div>
-    <h3 class="question">List of Meta-Directive</h3>
+    <h3 class="question">List of Meta Directives</h3>
     <div class="answer">
       <a class="margin" href="directive/raw">@raw</a>
       <a class="margin" href="directive/dynamic">@directive</a>
