--- a/overview/introduction.html
+++ b/overview/introduction.html
@@ -16,6 +16,21 @@
       <div>本文档围绕以上概念组织章节，并配备可修改的示例代码，方便你边读边练。</div>
       <strong>现在让我们一起开始dagger.js的学习和体验之旅吧！</strong>
     </div>
+    <h3 class="question">示例项目</h3>
+    <div class="answer">
+      <div>以下是一个没有任何第三方依赖的dagger.js<a target="_blank" href="https://codepen.io/dagger8224/pen/ZYbKvWB?editors=1000">示例项目</a>，您可以在codepen上folk它或者下载到本地运行，快速体验dagger.js提供的基本功能：</div>
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] entry project" src="https://codepen.io/dagger8224/embed/ZYbKvWB?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/ZYbKvWB">
+        [dagger-demo] entry project</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+      <div>这是使用shoelace组件实现相同功能的dagger.js<a target="_blank" href="https://codepen.io/dagger8224/pen/PwPmQVK?editors=1000">示例项目</a>：</div>
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] demo project (with shoelace components)" src="https://codepen.io/dagger8224/embed/PwPmQVK?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/PwPmQVK">
+        [dagger-demo] demo project (with shoelace components)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+    </div>
   </template>
   <template *exist="language === 'enUS'">
     <h2>Overview / Introduction</h2>
@@ -34,5 +49,21 @@
       <div>This documentation is organized around these concepts and includes editable sample code so you can read and practice as you go.</div>
       <strong>Now let’s begin the journey of learning and experiencing dagger.js together!</strong>
     </div>
+    <h3 class="question">Sample Project</h3>
+    <div class="answer">
+      <div>Here is a <a target="_blank" href="https://codepen.io/dagger8224/pen/ZYbKvWB?editors=1000">sample project</a> without any third‑party dependencies using dagger.js, you can fork it on codepen or download it and run it locally to experience the basic functionality of dagger.js:</div>
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] entry project" src="https://codepen.io/dagger8224/embed/ZYbKvWB?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/ZYbKvWB">
+        [dagger-demo] entry project</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+      <div>Here is a <a target="_blank" href="https://codepen.io/dagger8224/pen/PwPmQVK?editors=1000">sample project</a> using shoelace components in dagger.js:</div>
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] demo project (with shoelace components)" src="https://codepen.io/dagger8224/embed/PwPmQVK?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/PwPmQVK">
+        [dagger-demo] demo project (with shoelace components)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+    </div>
+  </template>
   </template>
 </div>
